...
                                                                    <nil key="highlightedColor"/>
                                                                    <userDefinedRuntimeAttributes>
                                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="FriendFullName"/>
                                                                    </userDefinedRuntimeAttributes>
                                                                </label>
...
                                <sections/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="FriendsTable"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="4zF-hb-R4g">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="bag.fill" catalog="system" style="plain" id="inb-YO-Ndv">
                            <color key="tintColor" red="0.9361206889" green="0.52501553300000003" blue="0.22731456159999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                            <color key="tintColor" red="0.99801880119999997" green="0.49860501289999998" blue="0.096701361240000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Add"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wUw-Lx-w8a">
                                                                <rect key="frame" x="0.0" y="34.000000000000057" width="358" height="34"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="fullNameInput">
                                                                    <accessibilityTraits key="traits" none="YES"/>
                                                                </accessibility>
...
                            <color key="tintColor" red="0.99801880119999997" green="0.49860501289999998" blue="0.096701361240000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="saveFriendBtn"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
